<resources>
    <string name="app_name">CommonStock</string>
    <string name="calPortValue">Calculate Portfolio Value</string>
    <string name="seeCurrStockRate">Current Stock Rate</string>
    <string name="savedPortValues">Saved Values</string>
    <string name="title_activity_portfolio_options">portfolioOptions</string>


    --! options

    <string name="stocksCheckBox">Stocks</string>
    <string name="bondsCheckBox">Bonds</string>
    <string name="ForwardContractsCheckBox">Forward Contracts</string>
    <string name="callOptionsCheckBox">Call Options</string>
    <string name="putOptionsCheckBox">Put Options</string>
    <string name="continueButton">Continue</string>
    <string name="title_activity_user_input">UserInput</string>>


    --! user input
    <string name="stocksText">Stocks</string>>
    <string name="BondsText">Bonds</string>>
    <string name="forwardText">Forward Contracts</string>>
    <string name="callText">Call Options</string>>
    <string name="putText">Put Options</string>>

    <string name="number">num</string>>
    <string name="fuNum_1">Future Value 1</string>>
    <string name="fuNum_2">Future Value 2</string>>
    <string name="currentValueText">Current Value</string>>

    <string name="calculate">Calculate</string>>
    <string name="eqname">Equity Name</string>>

    <string name="Stock">Stock: </string>>
    <string name="curdate">Current Date: </string>>
    <string name="openvalue">Open Value: </string>>
    <string name="hivalue">High Value: </string>>
    <string name="lovalue">Low Value: </string>>
    <string name="vol">Volume: </string>>
    <string name="alphavantagemessage">This feature uses AlphaVantage API.</string>>

    <string name="clearButton">Clear</string>
    <string name="Backbutton">Back</string>
    <string name="title_activity_current_stock_rates">CurrentStockRates</string>
    <string name="CurrentStockRates">Current Stock Rates</string>
    <string name="Alphavantageplaceholder">AlphaVantage Stock List to go here</string>
    <string name="title_activity_stock__results">Stock_Results</string>
    <string name="Results">Results</string>
    <string name="Valueifup">Portfolio Value If Up:</string>
    <string name="Valueifdown">Portfolio Value if Down:</string>
    <string name="risk">Risk:</string>
    <string name="portfolioreturn">Return:</string>
    <string name="emailresults">Email Results</string>
    <string name="tryanotheresult">Try Another Result</string>
    <string name="done">Done</string>
    <string name="probabilityup">Probability</string>
    <string name="percentage">Percentage</string>
    <string name="editvalues">Edit Values</string>>


    <string name="Return">Return Value:</string>>


    --!
    <string name="Recipient">Recipient Email</string>>
    <string name="Subject">Subject</string>>
    <string name="Message">Message</string>>
    <string name="Send">Send</string>
    <string name="Search">Search</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="userInfo">User Info</string>
    <string name="email">Email Address</string>
    <string name="EmailPassword">EmailPassword</string>
    <string name="UserName">Name</string>>

</resources>
