<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.hul233psu.commonstock.UserInput"


    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/activity_user_input">

    <EditText
        android:id="@+id/editText4"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/currentValueText"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="196dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/forwardText"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintBottom_toTopOf="@+id/editText44"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText35" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/BondsText"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText36"
        app:layout_constraintEnd_toStartOf="@+id/editText36"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/callText"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText48"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/putText"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText6"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/stocksText"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:onClick="goToStockResults"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="1.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/fuNum_2"
        android:inputType="number"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="598dp" />

    <EditText
        android:id="@+id/editText45"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/fuNum_2"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        tools:layout_editor_absoluteX="273dp" />

    <EditText
        android:id="@+id/editText46"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/fuNum_1"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editText45"
        tools:layout_editor_absoluteX="273dp" />

    <EditText
        android:id="@+id/editText47"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/currentValueText"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText45"
        tools:layout_editor_absoluteX="130dp" />

    <EditText
        android:id="@+id/editText48"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText46"
        tools:layout_editor_absoluteX="130dp" />

    <EditText
        android:id="@+id/editText41"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/fuNum_2"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editText46"
        tools:layout_editor_absoluteX="273dp" />

    <EditText
        android:id="@+id/editText42"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/fuNum_1"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editText41"
        tools:layout_editor_absoluteX="273dp" />

    <EditText
        android:id="@+id/editText43"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/currentValueText"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText41"
        tools:layout_editor_absoluteX="130dp" />

    <EditText
        android:id="@+id/editText44"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText42"
        app:layout_constraintEnd_toStartOf="@+id/editText42"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText34"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/fuNum_1"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editText35"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editText35"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/currentValueText"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editText36" />

    <EditText
        android:id="@+id/editText36"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText34"
        app:layout_constraintEnd_toStartOf="@+id/editText34" />

    <EditText
        android:id="@+id/editText29"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/fuNum_2"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editText34"
        app:layout_constraintEnd_toEndOf="@+id/editText30"
        app:layout_constraintStart_toStartOf="@+id/editText30" />

    <EditText
        android:id="@+id/editText30"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/fuNum_1"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editText29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText31"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/currentValueText"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editText32"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="@+id/editText32"
        app:layout_constraintTop_toBottomOf="@+id/editText32" />

    <EditText
        android:id="@+id/editText32"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editText31"
        app:layout_constraintEnd_toStartOf="@+id/editText30"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText3"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/fuNum_1"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
